Dernières modifications pour le Responsive-Design

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
         </div>
         <nav class="navbar navbar-expand-xl navbar-dark fixed-top">
             <a class="navbar-brand" href="{{ path('homepage') }}">
-                <img src="../pictures/photo.jpg" alt="Photo de Baptiste Bidaux" class="avatar">
+                <img src="../../pictures/photo.jpg" alt="Photo de Baptiste Bidaux" class="avatar">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
