--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -49,23 +49,23 @@
                         <ul class="text-center m-0 p-0">
                             <li class="header-li">FRONT</li>
                             <li class="li">
-                                <i class="fab fa-html5"></i> 
+                                <i class="fab fa-html5 mr-2"></i> 
                                 HTML 5
                             </li>
                             <li class="li">
-                                <i class="fab fa-css3-alt"></i>
+                                <i class="fab fa-css3-alt mr-2"></i>
                                 CSS 3
                             </li>
                             <li class="li">
-                                <i class="fab fa-js"></i>
+                                <i class="fab fa-js mr-2"></i>
                                 JavaScript (+ jQuery)
                             </li>
                             <li class="li">
-                                <i class="fab fa-bootstrap"></i>
+                                <i class="fab fa-bootstrap mr-2"></i>
                                 Bootstrap
                             </li>
                             <li class="li">
-                                <i class="fab fa-react"></i>
+                                <i class="fab fa-react mr-2"></i>
                                 React
                             </li>
                         </ul>
@@ -80,25 +80,25 @@
                         <ul class="text-center m-0 p-0">
                             <li class="header-li" class="header-li">BACK</li>
                             <li class="li">
-                                <i class="fab fa-php"></i>
+                                <i class="fab fa-php mr-2"></i>
                                 PHP (+ 
-                                <i class="fab fa-symfony"></i>
+                                <i class="fab fa-symfony mx-2"></i>
                                 Symfony 4 & 5)
                             </li>
                             <li class="li">
-                                <i class="fas fa-spider"></i>
+                                <i class="fas fa-spider mr-2"></i>
                                 API Platform
                             </li>
                             <li class="li">
-                                <i class="fas fa-database"></i>
+                                <i class="fas fa-database mr-2"></i>
                                 MySQL
                             </li>
                             <li class="li">
-                                <i class="fas fa-database"></i>
+                                <i class="fas fa-database mr-2"></i>
                                 MS SQL
                             </li>
                             <li class="li">
-                                <i class="fab fa-git-alt"></i>
+                                <i class="fab fa-git-alt mr-2"></i>
                                 Git
                             </li>
                         </ul>
@@ -143,7 +143,7 @@
                     <div class="carousel-caption d-block" style="background-color: royalblue;">
                         <h2>Mon BnB</h2>
                         <h4>Création d'un site de BnB en Symfony 4</h4>
-                        <a href="https://mon-bnb.herokuapp.com/" rel="noopener" target="blank" class="btn btn-info btn-lg">
+                        <a href="https://mon-bnb.herokuapp.com/" rel="noopener" target="blank" class="btn btn-secondary btn-lg">
                             <i class='bx bx-right-arrow-alt bx-flashing bx-md mr-2'></i>
                             Visiter le site
                         </a>
@@ -177,7 +177,7 @@
                     <div class="col-md-10">
                         <div class="card-body">
                             <h2 class="card-title">Développeur Web - YuSit (Le Petit-Quevilly)</h2>
-                            <p class="card-text h5">
+                            <p class="card-text">
                                 Refonte complète du site web de l’entreprise : 
                                 <strong>
                                     <a href="http://www.yusit.fr" style="color: #011f55" rel="no-opener" target="blank">http://www.yusit.fr</a>
@@ -186,9 +186,9 @@
                                 Maquettage, Modèle Conceptuel des Données (MCD), diagramme des cas d’utilisations,
                                 diagrammes de séquence, création de la Base De Données (BDD), création du site :
                                 <br>
-                                <strong>Frontend :</strong> HTML 5, CSS 3, JavaScript (+ jQuery), Bootstrap.
+                                <strong style="font-weight: 900;">Frontend :</strong> HTML 5, CSS 3, JavaScript (+ jQuery), Bootstrap.
                                 <br>
-                                <strong>Backend :</strong> Symfony (Framework PHP), MySQL, Méthode Ajax.
+                                <strong style="font-weight: 900;">Backend :</strong> Symfony (Framework PHP), MySQL, Méthode Ajax.
                             </p>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                     <div class="col-md-10">
                         <div class="card-body">
                             <h2 class="card-title">Conseiller Vendeur - PicWic (Barentin)</h2>
-                            <p class="card-text h5">
+                            <p class="card-text">
                                 Mise en rayon, gestion du marketing, conseil aux clients, prise en charge de la livraison, SAV, caisse.
                             </p>
                         </div>
@@ -219,7 +219,7 @@
                     <div class="col-md-10">
                         <div class="card-body">
                             <h2 class="card-title">Responsable Adjoint - Micromania (Tourville-La-Rivière & Barentin)</h2>
-                            <p class="card-text h5">
+                            <p class="card-text">
                                 Vente de jeux, de consoles et de produits associés (extensions de garantie, réservations, abonnements), gestion de la caisse, tenue du magasin, gestion des livraisons, gestion des 
                                 inventaires, gestion et encadrement des équipes, réalisation des plannings, gestion des invendus et des produits défectueux, marketing, tâches administratives, suivi des objectifs, 
                                 gestion du SAV.
@@ -237,7 +237,7 @@
                     <div class="col-md-10">
                         <div class="card-body">
                             <h2 class="card-title">Aide Comptable - Novandie (Maromme)</h2>
-                            <p class="card-text h5">
+                            <p class="card-text">
                                 Enregistrement des factures, déclaration de TVA, comptabilité analytique.
                             </p>
                         </div>
@@ -253,7 +253,7 @@
                     <div class="col-md-10">
                         <div class="card-body">
                             <h2 class="card-title">Téléconseiller - Orange (Rouen)</h2>
-                            <p class="card-text h5">
+                            <p class="card-text">
                                 Prise d’appels pour renseigner la clientèle sur les différents forfaits, mobiles, pour des questions d’ordre technique ou pour le règlement de leurs factures.
                             </p>
                         </div>
@@ -269,7 +269,7 @@
                     <div class="col-md-10">
                         <div class="card-body">
                             <h2 class="card-title">Chargé d'Accueil - Société Générale (Rouen & Le-Mesnil-Esnard)</h2>
-                            <p class="card-text h5">
+                            <p class="card-text">
                                 Accueil téléphonique ou réception des clients afin de les orienter ou de les renseigner, conception et rédaction de courriers, rapports ou notes, gestion de la caisse et du standard, 
                                 vente de produits bancaires, conseil clients, tâches administratives, gestion du courrier, gestion des devises.
                             </p>
@@ -289,7 +289,7 @@
                 <div class="card-header h5">2019</div>
                 <div class="card-body">
                     <h2 class="card-title">Titre Professionnel de Développeur Web / Web Mobile</h2>
-                    <p class="card-text h5">
+                    <p class="card-text">
                         AFPA de Saint-Étienne-du-Rouvray.
                     </p>
                 </div>
@@ -298,7 +298,7 @@
                 <div class="card-header h5">2006</div>
                 <div class="card-body">
                     <h2 class="card-title">BTS Banque - Option Marché des Particuliers</h2>
-                    <p class="card-text h5">
+                    <p class="card-text">
                         Centre de Formation de la Profession Bancaire (CFPB), Bois-Guillaume.
                         <br>
                         Société Générale, rue Jeanne d’Arc, Rouen.
@@ -309,7 +309,7 @@
                 <div class="card-header h5">2004</div>
                 <div class="card-body">
                     <h2 class="card-title">Baccalauréat Économique et Social</h2>
-                    <p class="card-text h5">
+                    <p class="card-text">
                         Lycée de la Vallée du Cailly, Déville lès Rouen.
                     </p>
                 </div>
@@ -324,15 +324,15 @@
         <div class="panel mb-3" id="contacts-panel">
             <div class="jumbotron" style="color: black; background-color: #cf9f69" id="contact-jumbotron">
                 <div class="row align-items-center">
-                    <div class="col-lg-10" id="me-small-device">
+                    <div class="col-sm-10" id="me-small-device">
                         <h1>Baptiste Bidaux</h1>
                         <p class="lead">Développeur Web / Web Mobile</p>
                     </div>
-                    <div class="col-lg-10" id="me-big-device">
+                    <div class="col-sm-10" id="me-big-device">
                         <h1 class="display-3">Baptiste Bidaux</h1>
                         <p class="lead display-4">Développeur Web / Web Mobile</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-sm-2">
                         <img src="pictures/photo.jpg" alt="Photo de Baptiste Bidaux" id="interactive-photo" class="img-fluid mx-auto d-block rounded" style="max-height: 30vh;">
                     </div>
                 </div>
