--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -3,6 +3,7 @@
 
 html, body {
     scroll-behavior: smooth;
+    font-family: 'Comfortaa', cursive;
 }
 
 body {
@@ -65,26 +66,6 @@ body {
     opacity: 0.5;
 }
 
-@media screen and (orientation: landscape) {
-    .nav-item {
-        height: 10vh;
-    }
-    .nav-link.btn {
-        padding-bottom: 0;
-        padding-top: 0;
-    }
-}
-
-@media screen and (min-width: 992px) and (orientation: landscape) {
-    .nav-item {
-        height: unset;
-    }
-    .nav-link.btn {
-        padding: 0.9rem 1rem;
-        margin-bottom: 0 !important;
-    }
-}
-
 .menu-logo {
     position: fixed;
     left: 10px;
@@ -94,14 +75,54 @@ body {
 }
 
 .bx-menu-alt-left {
-    font-size: 8vh;
+    font-size: 10vh;
     opacity: 0.7;
+}
+
+@media screen and (orientation: landscape) {
+    .nav-item {
+        height: 10vh;
+    }
+
+    .nav-link.btn {
+        padding-bottom: 0;
+        padding-top: 0;
+    }
+
+    .bx-menu-alt-left {
+        font-size: 20vh;
+    }
+}
+
+@media screen and (min-width: 992px) and (orientation: landscape) {
+    .nav-item {
+        height: unset;
+    }
+
+    .nav-link.btn {
+        padding: 0.9rem 1rem;
+        margin-bottom: 0 !important;
+    }
+
+    .bx-menu-alt-left {
+        font-size: 12vh;
+    }
+}
+
+@media screen and (min-width: 2500px) and (orientation: landscape) {
+    .bx-menu-alt-left {
+        font-size: 8vh;
+    }
 }
 
 /********************************* JUMBOTRON **************************************/
 
 #goals {
     font-family: 'Dancing Script', cursive;
+}
+
+.bxs-quote-alt-left, .bxs-quote-alt-right {
+    font-size: 5vh !important;
 }
 
 .type-writer {
@@ -112,29 +133,11 @@ body {
     font-size: 3.5vh !important;
 }
 
-@media screen and (min-height: 768px) {
-    .goals-content {
-        font-size: 3vh !important;
-    }
-
-    .type-writer {
-        font-size: 6vh;
-        margin-left: 10%;
-    }
-}
-
-@media screen and (min-height: 768px) and (max-width: 576px) {
-    .goals-content {
-        font-size: 2.5vh !important;
-    }
-
-    .type-writer {
-        font-size: 4vh;
-        margin-left: 5%;
-    }
-}
-
 @media screen and (orientation: landscape) {
+    .bxs-quote-alt-left, .bxs-quote-alt-right {
+        font-size: 12vh !important;
+    }
+
     .type-writer {
         font-size: 16vh;
         margin-left: 5%;
@@ -145,17 +148,55 @@ body {
     }
 }
 
+@media screen and (min-height: 768px) {
+    .bxs-quote-alt-left, .bxs-quote-alt-right {
+        font-size: 6vh !important;
+    }
+
+    .type-writer {
+        font-size: 6vh;
+        margin-left: 10%;
+    }
+    
+    .goals-content {
+        font-size: 3vh !important;
+    }
+}
+
+@media screen and (min-height: 768px) and (max-width: 576px) {
+    .bxs-quote-alt-left, .bxs-quote-alt-right {
+        font-size: 4vh !important;
+    }
+
+    .type-writer {
+        font-size: 4vh;
+        margin-left: 5%;
+    }
+
+    .goals-content {
+        font-size: 3vh !important;
+    }
+}
+
 @media screen and (min-width: 992px) and (orientation: landscape) {
+    .bxs-quote-alt-left, .bxs-quote-alt-right {
+        font-size: 9vh !important;
+    }
+
     .type-writer {
         font-size: 10vh;
     }
     
     .goals-content {
-        font-size: 5vh !important;
+        font-size: 4vh !important;
     }
 }
 
 @media screen and (min-width: 1200px) and (orientation: landscape) {
+    .bxs-quote-alt-left, .bxs-quote-alt-right {
+        font-size: 9vh !important;
+    }
+
     .type-writer {
         font-size: 10vh;
         margin-left: 5%
@@ -166,14 +207,28 @@ body {
     }
 }
 
+@media screen and (min-width: 1440px) and (orientation: landscape) {
+    .bxs-quote-alt-left, .bxs-quote-alt-right {
+        font-size: 7vh !important;
+    }
+
+    .goals-content {
+        font-size: 3.5vh !important;
+    }
+}
+
 @media screen and (min-width: 2500px) and (orientation: landscape) {
+    .bxs-quote-alt-left, .bxs-quote-alt-right {
+        font-size: 5.5vh !important;
+    }
+
     .type-writer {
         font-size: 8vh;
         margin-left: 5%;
     }
     
     .goals-content {
-        font-size: 3vh !important;
+        font-size: 2.5vh !important;
     }
 }
 
@@ -190,6 +245,13 @@ body {
     padding-left: 1%;
     height: 50vh;
     min-width: 100%;
+}
+
+.back ul li {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (orientation: portrait) and (min-width: 768px) {
@@ -323,8 +385,18 @@ body {
     bottom: 0px;
 }
 
+.carousel-caption h2 {
+    font-size: 4vh;
+    font-weight: 700;
+}
+
 .carousel-caption h4 {
+    font-weight: 300;
     display: none ;
+}
+
+.bxs-right-arrow, .bxs-left-arrow {
+    font-size: 1.5rem !important;
 }
 
 .carousel-indicators {
@@ -349,15 +421,53 @@ ol.carousel-indicators li.active {
     background-color: #cf9f69;
 }
 
+@media screen and (orientation: landscape) {
+    .carousel-caption h2 {
+        font-size: 8vh;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .carousel-caption h4 {
         display: block ;
+    }
+    
+    .bxs-right-arrow, .bxs-left-arrow {
+        font-size: 2rem !important;
+    }
+}
+
+@media screen and (min-width: 922px) {
+    .bxs-right-arrow, .bxs-left-arrow {
+        font-size: 2.5rem !important;
     }
 }
 
 @media screen and (min-width: 1200px) {
     #projects {
         width: 70%;
+    }
+
+    .carousel-caption h2 {
+        font-size: 6vh;
+    }
+}
+
+@media screen and (min-width: 2500px) {
+    .carousel-caption h2 {
+        font-size: 5vh;
+    }
+
+    .carousel-caption h4 {
+        font-size: 3vh;
+    }
+
+    .carousel-caption a {
+        font-size: 2vh;
+    }
+
+    .bxs-right-arrow, .bxs-left-arrow {
+        font-size: 3.5rem !important;
     }
 }
 
@@ -370,7 +480,7 @@ ol.carousel-indicators li.active {
     width: 100%;
     height: 8vh;
     text-align: center;
-    font-size: 3vh;
+    font-size: 2.9vh;
     border: none;
     outline: none;
     transition: 0.4s;
@@ -382,6 +492,24 @@ img[src^="pictures/gifs"] {
     height: 3vh;
 }
 
+.card-title {
+    font-weight: 800;
+}
+
+.card-text {
+    font-weight: 300;
+    font-size: 1rem;
+    line-height: 2;
+}
+
+h3 u, #download-cv {
+    font-weight: 900;
+}
+
+#download-cv {
+    font-size: 0.8125rem;
+}
+
 @media screen and (min-width: 576px) {
     .accordion {
         font-size: 4vh;
@@ -390,6 +518,10 @@ img[src^="pictures/gifs"] {
     img[src^="pictures/gifs"] {
         width: 4vh;
         height: 4vh;
+    }
+
+    #download-cv {
+        font-size: 1.015625rem;
     }
 }
 
@@ -401,6 +533,10 @@ img[src^="pictures/gifs"] {
     img[src^="pictures/gifs"] {
         width: 2.5vh;
         height: 2.5vh;
+    }
+
+    #download-cv {
+        font-size: 1.015625rem;
     }
 }
 
@@ -428,15 +564,24 @@ img[src^="pictures/gifs"] {
     }
 }
 
+@media screen and (min-width: 2500px) {
+    .card-text {
+        font-size: 1.5vh;
+    }
+}
+
 .accordion.active, .accordion:hover {
     background-color: #cf9f69;
     color: black;
 }
 
+.accordion:hover:not(.active) {
+    opacity: 0.5;
+}
+
 .panel {
     padding: 5px 20px;
     color: white;
-    font-family: 'Comfortaa', cursive;
     display: none;
     overflow: hidden;
 } 
@@ -472,6 +617,7 @@ img[src^="pictures/gifs"] {
 
 .contact-method {
     font-size: 2.5vh;
+    font-weight: 300;
 }
 
 @media screen and (orientation: landscape) {
@@ -480,6 +626,12 @@ img[src^="pictures/gifs"] {
     }
     .contact-method {
         font-size: 5vh;
+    }
+}
+
+@media screen and (min-width: 350px) and (max-width: 450px) {
+    .contact-method {
+        font-size: 2vh;
     }
 }
 
@@ -562,48 +714,60 @@ img[src^="pictures/gifs"] {
 
 /************************************ FORM *****************************************/
 label, .btn[type="submit"], #admin-logout {
-    font-size: 2vh;
+    font-size: 2.5vh;
+    font-weight: 300;
 }
-.form-control {
+
+.btn[type="submit"], #admin-logout {
+    font-weight: 900;
+}
+
+.form-control, .form-control:focus {
     background-color: #011f55;
     color: white;
-    font-size: 1.5vh;
+    font-size: 2.5vh;
+}
+
+.form-control:focus {
+    border: 4px solid white;
 }
 
 @media screen and (orientation: landscape) {
     label, .btn[type="submit"], #admin-logout {
-        font-size: 5vh;
+        font-size: 5vh !important;
     }
-    .form-control {
-        background-color: #011f55;
-        color: white;
-        font-size: 5vh;
+    .form-control, .form-control:focus {
+        font-size: 5vh !important;
+    }
+}
+
+@media screen and (min-height: 768px) {
+    label, .btn[type="submit"], #admin-logout {
+        font-size: 2vh;
+    }
+    .form-control, .form-control:focus {
+        font-size: 1.7vh;
     }
 }
 
 @media screen and (min-width: 992px) and (orientation: landscape) {
     label, .btn[type="submit"], #admin-logout {
-        font-size: 2.5vh;
+        font-size: 2.5vh !important;
     }
-    .form-control {
-        background-color: #011f55;
-        color: white;
-        font-size: 2.5vh;
-    }
-}
-
-@media screen and (min-width: 992px) and (orientation: landscape) {
-    label, .btn[type="submit"], #admin-logout {
-        font-size: 1.8vh;
-    }
-    .form-control {
-        background-color: #011f55;
-        color: white;
-        font-size: 1.8vh;
+    .form-control, .form-control:focus {
+        font-size: 2.5vh !important;
     }
 }
 
 @media screen and (min-width: 2500px) and (orientation: landscape) {
+    label, .btn[type="submit"], #admin-logout {
+        font-size: 2vh !important;
+    }
+
+    .form-control, .form-control:focus {
+        font-size: 1.5vh !important;
+    }
+
     #form {
         width: 70%;
         margin-left: auto;
@@ -612,7 +776,7 @@ label, .btn[type="submit"], #admin-logout {
 }
 
 label.required:before {
-    content: "*";
+    content: "* ";
 }
 
 #who-am-i {
@@ -623,7 +787,7 @@ label.required:before {
 
 @media screen and (min-width: 768px) {
     .who-am-i-content {
-        font-size: 3vh !important;
+        font-size: 2vh !important;
     }
 }
 
@@ -643,6 +807,13 @@ label.required:before {
         margin-left: auto;
         margin-right: auto;
     }
+}
+
+@media screen and (min-width: 1200px) and (orientation: landscape) {
+    .who-am-i-content {
+        font-size: 2.5vh !important;
+    }
+
 }
 
 @media screen and (min-width: 2500px) and (orientation: landscape) {
