--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -91,11 +91,13 @@
                             </li>
                             <li class="li">
                                 <i class="fas fa-database mr-2"></i>
-                                MySQL
+                                MySQL / MS SQL
                             </li>
                             <li class="li">
-                                <i class="fas fa-database mr-2"></i>
-                                MS SQL
+                                <img src="https://img.icons8.com/ios-filled/30/ffffff/heroku.png" class="mr-2 d-none d-xl-block">
+                                <img src="https://img.icons8.com/ios-filled/24/ffffff/heroku.png" class="mr-2 d-none d-sm-block d-xl-none">
+                                <img src="https://img.icons8.com/ios-filled/20/ffffff/heroku.png" class="mr-2 d-xs-block d-sm-none">
+                                Heroku
                             </li>
                             <li class="li">
                                 <i class="fab fa-git-alt mr-2"></i>
