Ajout d'Heroku dans les technos Backend + Mentions légales

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,6 +73,9 @@
 
         <div class="footer text-center pt-2" style="margin-bottom: 0 !important;">
             <h5>Copyright &copy; Tous droits réservés - Baptiste Bidaux - {{ "now" | date("Y")}}</h5>
+            <h5>
+                <a href="https://icons8.com/icon/32343/heroku" style="color: #011f55;">Heroku icon by Icons8</a>
+            </h5>
         </div>
 
 
