--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -12,7 +12,7 @@
         </div>  
     </div>
 
-    <div class="container mb-5" id="goals">
+    <div class="container py-5 mb-5" id="goals">
         <div class="jumbotron" style="background-color: #cf9f69;">
             <i class="bx bxs-quote-alt-left bx-lg"></i>
             <h1 class="type-writer"></h1>
