--- a/templates/main/messages.html.twig
+++ b/templates/main/messages.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container-fluid pb-5" id="messages-page">
+    <div class="container-fluid py-5" id="messages-page">
         <h1 class="my-5 text-white text-center">Liste des messages</h1>
 
         {% for message in app.flashes('delete-success') %}
