--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container pb-5" id="message-page">
+    <div class="container py-5" id="message-page">
         <h3 class="text-center text-white my-5">
             Message de <strong>{{ message.name }}</strong> du {{ message.createdAt | date('d/m/Y') }}
         </h3>
