--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,42 +5,44 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container mb-3" id="login-form">
-        {% if error %}
-            <div class="alert alert-primary rounded-lg alert-dismissible fade show" role="alert">
-                <strong>Attention,</strong> 
-                identification impossible !
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% endif %}
-
-        <form method="post">
-            <div class="row align-items-center">
-                <div class="lottie mb-5 pt-3 mx-2" data-animation-path="animation/" data-anim-loop="true" data-name="ninja" id="lock"></div>
-                <h1 class="mb-5 pt-3 font-weight-normal">
-                    Connexion
-                </h1>
-            </div>
-
-            <label for="inputEmail">Email</label>
-            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control login-control" required autofocus>
-            <label for="inputPassword">Mot de passe</label>
-            <input type="password" name="password" id="inputPassword" class="form-control login-control mb-3" required>
-
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-            <button class="btn btn-success mt-5 mb-3" type="submit">
-                <i class='bx bxs-lock-open bx-sm mr-2'></i>
-                Valider
-            </button>
-            {% if app.user %}
-               <a href="{{ path('app_logout') }}" class="btn btn-primary mt-5 mb-3" id="admin-logout">
-                    <i class='bx bx-power-off bx-sm mr-2' ></i>   
-                    Déconnexion
-                </a>
+    <div class="container py-5 mb-3">
+        <div class="container" id="login-form">
+            {% if error %}
+                <div class="alert alert-primary rounded-lg alert-dismissible fade show" role="alert">
+                    <strong>Attention,</strong> 
+                    identification impossible !
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
             {% endif %}
-        </form>
+
+            <form method="post">
+                <div class="row align-items-center">
+                    <div class="lottie mb-5 pt-3 mx-2" data-animation-path="animation/" data-anim-loop="true" data-name="ninja" id="lock"></div>
+                    <h1 class="mb-5 pt-3 font-weight-normal">
+                        Connexion
+                    </h1>
+                </div>
+    
+                <label for="inputEmail">Email</label>
+                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control login-control" required autofocus>
+                <label for="inputPassword">Mot de passe</label>
+                <input type="password" name="password" id="inputPassword" class="form-control login-control mb-3" required>
+    
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+    
+                <button class="btn btn-success mt-5 mb-3" type="submit">
+                    <i class='bx bxs-lock-open bx-sm mr-2'></i>
+                    Valider
+                </button>
+                {% if app.user %}
+                   <a href="{{ path('app_logout') }}" class="btn btn-primary mt-5 mb-3" id="admin-logout">
+                        <i class='bx bx-power-off bx-sm mr-2' ></i>   
+                        Déconnexion
+                    </a>
+                {% endif %}
+            </form>
+        </div>
     </div>
 {% endblock %}
