--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -116,6 +116,7 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-interval="2000">
@@ -141,11 +142,22 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="pictures/monbnb.png" class="d-block w-100" alt="Phooto du projet Mon BnB">
+                    <img src="pictures/monbnb.png" class="d-block w-100" alt="Photo du projet Mon BnB">
                     <div class="carousel-caption d-block" style="background-color: royalblue;">
                         <h2>Mon BnB</h2>
                         <h4>Création d'un site de BnB en Symfony 4</h4>
                         <a href="https://mon-bnb.herokuapp.com/" rel="noopener" target="blank" class="btn btn-secondary btn-lg">
+                            <i class='bx bx-right-arrow-alt bx-flashing bx-md mr-2'></i>
+                            Visiter le site
+                        </a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="pictures/maboitearecettes.png" class="d-block w-100" alt="Photo du projet Ma Boîte à Recettes" style="filter: blur(1px)">
+                    <div class="carousel-caption d-block" style="color: black; background-color: rgba(255, 255, 255, 0); text-shadow: 1px 1px 2px black;">
+                        <h2>Ma Boite à Recettes</h2>
+                        <h4>Création d'un site de Recettes en React</h4>
+                        <a href="https://my-recipe-box-baptiste.netlify.com" rel="noopener" target="blank" class="btn btn-primary btn-lg">
                             <i class='bx bx-right-arrow-alt bx-flashing bx-md mr-2'></i>
                             Visiter le site
                         </a>
