Ajout de l'icone Webpack

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -89,6 +89,11 @@
                             <li class="li">
                                 <i class="fab fa-react mr-2"></i>
                                 React
+                                &
+                                <img src="https://img.icons8.com/wired/30/000000/webpack.png" class="mx-2 d-none d-xl-block">
+                                <img src="https://img.icons8.com/wired/24/000000/webpack.png" class="mx-2 d-none d-sm-block d-xl-none">
+                                <img src="https://img.icons8.com/wired/20/000000/webpack.png" class="mx-2 d-xs-block d-sm-none">
+                                Webpack
                             </li>
                         </ul>
                     </div>
@@ -501,7 +506,7 @@
                                 </p>
                                 <p>
                                     Cet intérêt pour le partage et l'apprentissage, je le développe aussi dans le cadre professionnel où j'aime sentir que j'appartiens à une équipe soudée et qui avance
-                                    dans la même direction. on apprécie généralement mon sens du relationnel et ma joie de vivre.
+                                    dans la même direction. On apprécie généralement mon sens du relationnel et ma joie de vivre.
                                     <i class="bx bxs-quote-alt-right bx-fw"></i>
                                 </p>
                                 <footer class="blockquote-footer" style="font-size: 1.3rem;">Baptiste Bidaux</footer>
