Ajout de la pratique du SCSS et modif du CV

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -76,7 +76,9 @@
                             </li>
                             <li class="li">
                                 <i class="fab fa-css3-alt mr-2"></i>
-                                CSS 3
+                                CSS 3 & 
+                                <i class="fab fa-sass mx-2"></i>
+                                SCSS
                             </li>
                             <li class="li">
                                 <i class="fab fa-js mr-2"></i>
