--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="pictures/maboitearecettes.png" class="d-block w-100" alt="Photo du projet Ma Boîte à Recettes" style="filter: blur(1px)">
+                    <img src="pictures/maboitearecettes.png" class="d-block w-100" alt="Photo du projet Ma Boîte à Recettes">
                     <div class="carousel-caption d-block" style="color: black; background-color: rgba(255, 255, 255, 0); text-shadow: 1px 1px 2px black;">
                         <h2>Ma Boite à Recettes</h2>
                         <h4>Création d'un site de Recettes en React</h4>
