--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,14 +4,36 @@
         <meta charset="UTF-8">        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Open Graph -->
+    <meta name="description" content="Tout est dans le titre ! Le meilleur moyen de me connaître et de voir ce que je sais faire !">
+    <meta property="og:site_name" content="Baptiste Bidaux - Développeur Web Junior">
+    <meta property="og:url" content="https://baptiste-bidaux.herokuapp.com/">
+    <meta property="og:title" content="Baptiste Bidaux - Développeur Web Junior">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://baptiste-bidaux.herokuapp.com/public/pictures/photo.jpg">
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="1066" />
+    <meta property="og:description" content="Tout est dans le titre ! Le meilleur moyen de me connaître et de voir ce que je sais faire !">
+    <meta name="author" content="Baptiste Bidaux">
+
         <title>{% block title %}{% endblock %}</title>
 
         {% block stylesheets %}{% endblock %}
 
+        <!-- Bootstrap -->
         <link rel="stylesheet" href="/CSS/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Inria+Serif&display=swap" rel="stylesheet"> 
+
+        <!-- Google Font-->
+        <link href="https://fonts.googleapis.com/css?family=Inria+Serif&display=swap" rel="stylesheet">
+
+        <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/dbc1e24743.js" crossorigin="anonymous"></script>
+
+        <!-- Boxicons -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.4/css/boxicons.min.css' rel='stylesheet'>
+
+        <!-- Stylesheet -->
         <link rel="stylesheet" href="/CSS/app.css">
     </head>
 
