--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,16 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Open Graph -->
-        <meta name="description" content="Tout est dans le titre ! Le meilleur moyen de me connaître et de voir ce que je sais faire !">
         <meta property="og:site_name" content="Baptiste Bidaux - Développeur Web Junior">
         <meta property="og:url" content="https://baptiste-bidaux.herokuapp.com/">
-        <meta property="og:title" content="Baptiste Bidaux - Développeur Web Junior">
+        <meta property="og:title" content="Baptiste Bidaux - Développeur Web Junior" name="title">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://baptiste-bidaux.herokuapp.com/public/pictures/photo.jpg">
+        <meta property="og:image" content="http://baptiste-bidaux.herokuapp.com/public/pictures/photo.jpg" name="image">
         <meta property="og:image:type" content="image/jpeg" />
         <meta property="og:image:width" content="800" />
         <meta property="og:image:height" content="1066" />
-        <meta property="og:description" content="Tout est dans le titre ! Le meilleur moyen de me connaître et de voir ce que je sais faire !">
+        <meta property="og:description" content="Tout est dans le titre ! Le meilleur moyen de me connaître et de voir ce que je sais faire !" name="description">
         <meta name="author" content="Baptiste Bidaux">
 
         <title>{% block title %}{% endblock %}</title>
