--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         <meta property="og:url" content="https://baptiste-bidaux.herokuapp.com/">
         <meta property="og:title" content="Baptiste Bidaux - Développeur Web Junior" name="title">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="http://baptiste-bidaux.herokuapp.com/public/pictures/photo.jpg" name="image">
+        <meta property="og:image" content="https://baptiste-bidaux.herokuapp.com/pictures/photo.jpg" name="image">
         <meta property="og:image:type" content="image/jpeg" />
         <meta property="og:image:width" content="800" />
         <meta property="og:image:height" content="1066" />
